--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,10 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+# other
+.idea
+*.iml
+target
+logs
+schedule-admin/src/main/resources/application.yml
