--- a/pom.xml
+++ b/pom.xml
@@ -31,8 +31,9 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <schedule.version>1.0-SNAPSHOT</schedule.version>
         <lombok.version>1.16.18</lombok.version>
-        <hutool.version>3.2.1</hutool.version>
+        <hutool.version>4.0.2</hutool.version>
         <hessian.version>4.0.38</hessian.version>
         <mybatis.version>1.3.0</mybatis.version>
         <druid.version>1.0.20</druid.version>
@@ -51,7 +52,7 @@
             </dependency>
 
             <dependency>
-                <groupId>com.xiaoleilu</groupId>
+                <groupId>cn.hutool</groupId>
                 <artifactId>hutool-all</artifactId>
                 <version>${hutool.version}</version>
             </dependency>
@@ -83,6 +84,12 @@
                 <groupId>org.apache.logging.log4j</groupId>
                 <artifactId>log4j-core</artifactId>
                 <version>${log4j.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.schedule.star</groupId>
+                <artifactId>schedule-core</artifactId>
+                <version>${schedule.version}</version>
             </dependency>
 
         </dependencies>
