--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,7 @@
         <lombok.version>1.16.18</lombok.version>
         <hutool.version>4.0.2</hutool.version>
         <hessian.version>4.0.38</hessian.version>
+        <mysql.version>5.1.44</mysql.version>
         <mybatis.version>1.3.0</mybatis.version>
         <druid.version>1.0.20</druid.version>
         <dozer.version>5.4.0</dozer.version>
@@ -44,6 +45,17 @@
 
     <dependencyManagement>
         <dependencies>
+            <dependency>
+                <groupId>org.mybatis.spring.boot</groupId>
+                <artifactId>mybatis-spring-boot-starter</artifactId>
+                <version>${mybatis.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>mysql</groupId>
+                <artifactId>mysql-connector-java</artifactId>
+                <version>${mysql.version}</version>
+            </dependency>
 
             <dependency>
                 <groupId>org.projectlombok</groupId>
@@ -90,6 +102,12 @@
                 <groupId>com.schedule.star</groupId>
                 <artifactId>schedule-core</artifactId>
                 <version>${schedule.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.alibaba</groupId>
+                <artifactId>druid</artifactId>
+                <version>${druid.version}</version>
             </dependency>
 
         </dependencies>
