--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,6 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <schedule.version>1.0-SNAPSHOT</schedule.version>
         <lombok.version>1.16.18</lombok.version>
         <hutool.version>4.0.2</hutool.version>
         <hessian.version>4.0.38</hessian.version>
@@ -45,6 +44,12 @@
 
     <dependencyManagement>
         <dependencies>
+            <dependency>
+                <groupId>com.schedule.star</groupId>
+                <artifactId>schedule-core</artifactId>
+                <version>${version}</version>
+            </dependency>
+
             <dependency>
                 <groupId>org.mybatis.spring.boot</groupId>
                 <artifactId>mybatis-spring-boot-starter</artifactId>
@@ -99,17 +104,10 @@
             </dependency>
 
             <dependency>
-                <groupId>com.schedule.star</groupId>
-                <artifactId>schedule-core</artifactId>
-                <version>${schedule.version}</version>
-            </dependency>
-
-            <dependency>
                 <groupId>com.alibaba</groupId>
                 <artifactId>druid</artifactId>
                 <version>${druid.version}</version>
             </dependency>
-
         </dependencies>
     </dependencyManagement>
 
