--- a/schedule-admin/src/main/resources/application-example.yml
+++ b/schedule-admin/src/main/resources/application-example.yml
@@ -5,7 +5,7 @@ spring:
   datasource:
     driver-class-name: com.mysql.jdbc.Driver
     url: jdbc:mysql://127.0.0.1:3306/schedule_star?useUnicode=true&characterEncoding=UTF-8&useSSL=true
-    data-username: root
+    username: root
     password: xxxx
     type: com.alibaba.druid.pool.DruidDataSource
 
