--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,7 @@
         <dozer.version>5.4.0</dozer.version>
         <quartz.version>2.3.0</quartz.version>
         <log4j.version>2.10.0</log4j.version>
+        <commons.cli.version>1.2</commons.cli.version>
     </properties>
 
     <dependencyManagement>
@@ -107,6 +108,12 @@
                 <groupId>com.alibaba</groupId>
                 <artifactId>druid</artifactId>
                 <version>${druid.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>commons-cli</groupId>
+                <artifactId>commons-cli</artifactId>
+                <version>${commons.cli.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
