--- a/schedule-executor/pom.xml
+++ b/schedule-executor/pom.xml
@@ -42,10 +42,15 @@
             <artifactId>log4j-core</artifactId>
         </dependency>
 
-        <!--<dependency>-->
-            <!--<groupId>com.schedule.star</groupId>-->
-            <!--<artifactId>schedule-core</artifactId>-->
-        <!--</dependency>-->
+        <dependency>
+            <groupId>commons-cli</groupId>
+            <artifactId>commons-cli</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>com.schedule.star</groupId>
+            <artifactId>schedule-core</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
@@ -53,6 +58,14 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                </configuration>
             </plugin>
         </plugins>
     </build>
