--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,8 @@
         <quartz.version>2.3.0</quartz.version>
         <log4j.version>2.10.0</log4j.version>
         <commons.cli.version>1.2</commons.cli.version>
+        <jackson.version>2.8.4</jackson.version>
+        <jackson.mapper.asl.version>1.9.13</jackson.mapper.asl.version>
     </properties>
 
     <dependencyManagement>
@@ -114,6 +116,22 @@
                 <groupId>commons-cli</groupId>
                 <artifactId>commons-cli</artifactId>
                 <version>${commons.cli.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.codehaus.jackson</groupId>
+                <artifactId>jackson-mapper-asl</artifactId>
+                <version>${jackson.mapper.asl.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.fasterxml.jackson.core</groupId>
+                <artifactId>jackson-core</artifactId>
+                <version>${jackson.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.fasterxml.jackson.core</groupId>
+                <artifactId>jackson-databind</artifactId>
+                <version>${jackson.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
