--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,7 @@
         <commons.cli.version>1.2</commons.cli.version>
         <jackson.version>2.8.4</jackson.version>
         <jackson.mapper.asl.version>1.9.13</jackson.mapper.asl.version>
+        <apache.exec>1.3</apache.exec>
     </properties>
 
     <dependencyManagement>
@@ -132,6 +133,12 @@
                 <groupId>com.fasterxml.jackson.core</groupId>
                 <artifactId>jackson-databind</artifactId>
                 <version>${jackson.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.apache.commons</groupId>
+                <artifactId>commons-exec</artifactId>
+                <version>${apache.exec}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
